[gd_scene load_steps=7 format=3 uid="uid://bpb0o4fkrm0ck"]

[ext_resource type="Script" uid="uid://d4nkurwmwmqii" path="res://Code/Objects/grabbable_window_test.gd" id="1_3qhvn"]
[ext_resource type="Texture2D" uid="uid://bby3bciial160" path="res://Sprites/window/window_fat.png" id="1_fbsn4"]
[ext_resource type="Texture2D" uid="uid://c3infx8b60r7t" path="res://Sprites/window/Xbutton.png" id="3_2xyl4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xyl4"]
size = Vector2(190, 190)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3qhvn"]
size = Vector2(150, 150)

[sub_resource type="CircleShape2D" id="CircleShape2D_2xyl4"]
radius = 50.0

[node name="grabbable_window_test" type="RigidBody2D"]
position = Vector2(-88, -9)
freeze = true
script = ExtResource("1_3qhvn")
closable = null
physics_item = false
show_debug = null

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
size_flags_vertical = 0
texture = ExtResource("1_fbsn4")
region_rect = Rect2(0, 0, 96, 96)
patch_margin_left = 16
patch_margin_top = 36
patch_margin_right = 16
patch_margin_bottom = 16

[node name="close_button" type="Control" parent="NinePatchRect"]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/close_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2xyl4")

[node name="closeBtn" type="Button" parent="NinePatchRect/close_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -12.0
offset_right = 32.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 16
text = "close"

[node name="Button" type="Button" parent="."]
offset_left = 5.0
offset_right = 135.0
offset_bottom = 42.0
scale = Vector2(0.5, 0.5)
text = "grab zone"

[node name="player_detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection_area"]
position = Vector2(37.5, 37.5)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_2xyl4")
debug_color = Color(0.969064, 0, 0.463808, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(37.5, 37.5)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_3qhvn")

[node name="debug" type="Node" parent="."]

[node name="Line2D" type="Line2D" parent="debug"]
visible = false
show_behind_parent = true
points = PackedVector2Array(0, 0, 0, 0)
width = 5.0
default_color = Color(0, 0.572549, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="debug"]
position = Vector2(-88, -9)
shape = SubResource("CircleShape2D_2xyl4")
disabled = true

[connection signal="pressed" from="NinePatchRect/close_button/closeBtn" to="." method="_on_close_btn_pressed"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="body_entered" from="player_detection_area" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="player_detection_area" to="." method="_on_player_detection_area_body_exited"]
